# BoggleSolver

./: CMakeLists.txt  README.md
Application/: BoggleApplication.cpp  BoggleApplication.h  CMakeLists.txt  Main.cpp
Dependencies/: Conan.cmake  Linux.txt  Windows.txt
Tests/: CMakeLists.txt  TestsMain.cpp
Tests/Mocks/: MockDictionary.h  MockRandomCharacterSequence.h
Tests/UnitTests/: BoggleT.cpp  DictionaryT.cpp  GridT.cpp  PredictiveDictionaryT.cpp  SimpleDictionaryT.cpp
